modified README, gitignore and notebook

--- a/notebooks/sales_analysis_eda.ipynb
+++ b/notebooks/sales_analysis_eda.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Data Loading and Cleaning"
+    "## 1. Data Preprocessing"
    ]
   },
   {
